# Coyote-OS

./: Cinco.ledger  README.md  coyote.py  editor.py  get-pip.py  jedi.py  main.py  pyproject.toml  sysinfo.txt
man/: cat.txt  cconfig.txt  exit.txt  jedi.txt  la.txt  logout.txt  ls.txt  man.txt  mkdir.txt
os/Cinco/: readme
