[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Scott Little <k1206150@students.katyisd.org>"]
description = ""
name = "coyote-os"
version = "0.1.0"
[tool.poetry.dependencies]
getch = "^1.0"
python = "^3.7"
termcolor = "^1.1"
colorama = "^0.4.3"
[tool.poetry.dev-dependencies]
